Fix for row header misalignment

--- a/handsontable/src/styles/base/_base.scss
+++ b/handsontable/src/styles/base/_base.scss
@@ -84,10 +84,14 @@
             }
           }
 
-          &:first-of-type td {
-            height: calc(
-              var(--ht-cell-vertical-padding) * 2 + var(--ht-line-height) + 1px
-            );
+          &:first-of-type {
+            th,
+            td {
+              height: calc(
+                var(--ht-cell-vertical-padding) * 2 + var(--ht-line-height) +
+                  1px
+              );
+            }
           }
         }
       }
@@ -164,10 +168,13 @@
     }
 
     // compensates the top border width of the first row
-    tr:first-of-type td {
-      height: calc(
-        var(--ht-cell-vertical-padding) * 2 + var(--ht-line-height) + 2px
-      );
+    tr:first-of-type {
+      th,
+      td {
+        height: calc(
+          var(--ht-cell-vertical-padding) * 2 + var(--ht-line-height) + 2px
+        );
+      }
     }
 
     // Cell
